Fixes layout issue in IE11

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .App {
+  display: flex;
+  flex-direction: column;
   text-align: center;
   color: #424242;
   font-size: 18px;
@@ -15,20 +17,27 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-content: center;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   font-size: 22px;
   background-image: url("./assets/denali4.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
 
+.App-header :after {
+  content: "";
+  min-height: inherit;
+  font-size: 0;
+}
+
 section {
   display: flex;
   flex-direction: column;
+  align-self: center;
   max-width: 600px;
-  margin: 32px auto;
+  width: 90%;
+  margin: 32px 5%;
 }
 
 .App-link {
@@ -37,15 +46,6 @@ section {
 
 .Button {
   position: absolute;
-}
-
-p {
-  display: flex;
-  flex-direction: column;
-  margin: 16px auto;
-  width: 100%;
-  max-width: 90%;
-  text-align: left;
 }
 
 /* @keyframes App-logo-spin {
